crates/vite_task_plan/tests/plan_snapshots/fixtures/cd-in-scripts/snapshots/query - cd before vp run should not affect expanded task cwd.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - cd-build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/cd-in-scripts
---
[
  {
    "key": [
      "<workspace>/",
      "cd-build"
    ],
    "node": {
      "task_display": {
        "package_name": "",
        "task_name": "cd-build",
        "package_path": "<workspace>/"
      },
      "items": [
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "",
              "task_name": "cd-build",
              "package_path": "<workspace>/"
            },
            "command": "vp run build",
            "and_item_index": 1,
            "cwd": "<workspace>/src"
          },
          "kind": {
            "Expanded": [
              {
                "key": [
                  "<workspace>/",
                  "build"
                ],
                "node": {
                  "task_display": {
                    "package_name": "",
                    "task_name": "build",
                    "package_path": "<workspace>/"
                  },
                  "items": [
                    {
                      "execution_item_display": {
                        "task_display": {
                          "package_name": "",
                          "task_name": "build",
                          "package_path": "<workspace>/"
                        },
                        "command": "print-file package.json",
                        "and_item_index": null,
                        "cwd": "<workspace>/"
                      },
                      "kind": {
                        "Leaf": {
                          "Spawn": {
                            "cache_metadata": {
                              "spawn_fingerprint": {
                                "cwd": "",
                                "program_fingerprint": {
                                  "OutsideWorkspace": {
                                    "program_name": "print-file"
                                  }
                                },
                                "args": [
                                  "package.json"
                                ],
                                "env_fingerprints": {
                                  "fingerprinted_envs": {},
                                  "pass_through_env_config": [
                                    "<default pass-through envs>"
                                  ]
                                },
                                "fingerprint_ignores": null
                              },
                              "execution_cache_key": {
                                "UserTask": {
                                  "task_name": "build",
                                  "and_item_index": 0,
                                  "extra_args": [],
                                  "package_path": ""
                                }
                              }
                            },
                            "spawn_command": {
                              "program_path": "<tools>/node_modules/.bin/print-file",
                              "args": [
                                "package.json"
                              ],
                              "all_envs": {
                                "NO_COLOR": "1",
                                "PATH": "<workspace>/node_modules/.bin:<tools>/node_modules/.bin"
                              },
                              "cwd": "<workspace>/"
                            }
                          }
                        }
                      }
                    }
                  ]
                },
                "neighbors": []
              }
            ]
          }
        }
      ]
    },
    "neighbors": []
  }
]
